@@ -67,6 +67,7 @@ Test-doc-block versioning scheme is: `major`.`minor`.`release`-`test-qualifier`
 image:seancorfield.png[seancorfield,width=273,link="https://github.com/seancorfield"]
 image:MIJOTHY.png[MIJOTHY,width=273,link="https://github.com/MIJOTHY"]
 image:borkdude.png[borkdude,width=273,link="https://github.com/borkdude"]
+image:genmeblog.png[genmeblog,width=273,link="https://github.com/genmeblog"]
 image:holyjak.png[holyjak,width=273,link="https://github.com/holyjak"]
 image:PEZ.png[PEZ,width=273,link="https://github.com/PEZ"]
 image:SevereOverfl0w.png[SevereOverfl0w,width=273,link="https://github.com/SevereOverfl0w"]
