@@ -1,0 +1,4 @@
+```clojure
+(+ 1 2)
+;; => 3
+```
