@@ -16,6 +16,10 @@ A release with known breaking changes is marked with:
 
 == Unreleased
 
+* Tests can now be generated from a header-less doc
+https://github.com/lread/test-doc-blocks/issues/25[#25]
+(thanks for the feedback https://github.com/genmeblog[@genmeblog]!)
+
 == v1.1.19 - 2024-05-02 [[v1.1.19]]
 
 * Drop `alpha` status, we don't have many users, but folks have been using this lib for years
